P2-3484-Endpoint url change
