# src/SFA.DAS.DigitalCertificates.Api/Controllers/UsersController.cs
@@ -181,7 +181,7 @@ namespace SFA.DAS.DigitalCertificates.Api.Controllers
             }
         }
 
-        [HttpPost("{userId}/actions")]
+        [HttpPost("{userId}/user-actions")]
         [ProducesResponseType(typeof(CreateUserActionCommandResponse), StatusCodes.Status200OK)]
         [ProducesResponseType(StatusCodes.Status400BadRequest)]
         [ProducesResponseType(StatusCodes.Status500InternalServerError)]
@@ -205,30 +205,9 @@ namespace SFA.DAS.DigitalCertificates.Api.Controllers
             }
         }
 
-        [HttpPost("adminactions")]
-        [ProducesResponseType(StatusCodes.Status204NoContent)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-        public async Task<IActionResult> CreateAdminAction([FromBody] CreateAdminActionCommand request)
-        {
-            try
-            {
-                await _mediator.Send(request);
-                return NoContent();
-            }
-            catch (ValidationException ex)
-            {
-                _logger.LogError(ex, "Validation error attempting to create admin action.");
-                return BadRequest(new { errors = ex.Errors });
-            }
-            catch (Exception ex)
-            {
-                _logger.LogError(ex, "Error attempting to create admin action.");
-                return StatusCode(StatusCodes.Status500InternalServerError);
-            }
-        }
+        
 
-        [HttpGet("{userId}/actions")]
+        [HttpGet("{userId}/user-actions")]
         [ProducesResponseType(typeof(GetUserActionsQueryResult), StatusCodes.Status200OK)]
         [ProducesResponseType(StatusCodes.Status400BadRequest)]
         [ProducesResponseType(StatusCodes.Status500InternalServerError)]
@@ -251,34 +230,7 @@ namespace SFA.DAS.DigitalCertificates.Api.Controllers
             }
         }
 
-        [HttpGet("useractions/{code}")]
-        [ProducesResponseType(typeof(GetUserActionByCodeQueryResult), StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status404NotFound)]
-        [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        [ProducesResponseType(StatusCodes.Status500InternalServerError)]
-        public async Task<IActionResult> GetUserActionByCode(string code)
-        {
-            try
-            {
-                var result = await _mediator.Send(new GetUserActionByCodeQuery { ActionCode = code });
-                if (result == null)
-                {
-                    return NotFound();
-                }
-
-                return Ok(result);
-            }
-            catch (ValidationException ex)
-            {
-                _logger.LogError(ex, "Validation error attempting to retrieve user action for {ActionCode}", code);
-                return BadRequest(new { errors = ex.Errors });
-            }
-            catch (Exception ex)
-            {
-                _logger.LogError(ex, "Error attempting to retrieve user action for {ActionCode}", code);
-                return StatusCode(StatusCodes.Status500InternalServerError);
-            }
-        }
+        
 
         [HttpPost("{userId}/match")]
         [ProducesResponseType(StatusCodes.Status204NoContent)]
